--- a/index.html
+++ b/index.html
@@ -1,120 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Syed Hilaluddin Madany - Career Journey</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            padding: 20px;
-        }
-        .segment {
-            background-color: #f9f9f9;
-            padding: 20px;
-            margin-bottom: 20px;
-            border-radius: 5px;
-        }
-        h1, h2, h3 {
-            color: #333;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-        }
-        li {
-            margin-bottom: 10px;
-        }
-        img {
-            border-radius: 50%;
-            max-width: 150px;
-            height: auto;
-            margin-bottom: 20px;
-        }
-        .double-line {
-            border-top: 2px solid #ccc;
-            margin-top: 20px;
-            margin-bottom: 20px;
-            position: relative;
-        }
-        .double-line::before {
-            content: '';
-            position: absolute;
-            top: -2px;
-            left: 0;
-            width: 100%;
-            height: 2px;
-            border-top: 2px solid #ccc;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Career Journey</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+    }
+    h1 {
+      color: #3366ff;
+    }
+    h2 {
+      color: #009933;
+    }
+    ul {
+      color: #ff6600;
+    }
+    p {
+      color: #333333;
+    }
+  </style>
 </head>
 <body>
-    <div class="segment">
-        <h1>Syed Hilaluddin Madany - Career Journey</h1>
-        <img src=""C:\Users\DELL\Downloads\Digital Marketer LinkedIn Profile Picture.png"" alt="Profile Picture">
-        <p>Telephone: +966 534262974</p>
-    </div>
-    <div class="double-line"></div>
-
-    <div class="segment">
-        <h2>About Me</h2>
-        <ul>
-            <li>👋 <strong>Hello!</strong> I began my career in the sales industry, where I honed my communication skills, built strong customer relationships, and helped clients meet their needs.</li>
-            <li>🌍 <strong>Sales Across Industries:</strong> My travels have taken me through various sectors, including Filtration, Mining, Combustion, and Manufacturing. I've ventured beyond sales into project roles such as cost specialist and coordinator, effectively managing budgets, teams, and resources.</li>
-            <li>🛠️ <strong>Technical Expertise:</strong> My educational background includes technical roles as a Service and Site Engineer. I've ensured that complex systems like filters and combustion operate at peak efficiency.</li>
-            <li>📈 <strong>Sales and Marketing Acumen:</strong> Eager for new challenges, I transitioned to Sales and Marketing. As a mechanical engineer, I excel at translating complex engineering solutions into tangible benefits for customers, tailoring each solution to meet their unique requirements.</li>
-            <li>🏢 <strong>Facilities Management:</strong> My career naturally evolved into facilities management, where I applied my background in sales, project management, and engineering. I ensure that every facility I manage is not only functional but optimized for maximum efficiency and stability.</li>
-            <li>🎥 <strong>Content Creation and Education:</strong> Beyond my career, I'm passionate about creating educational content, especially in the realm of mechanical projects and technical concepts. This hobby allows me to share knowledge and learn in a fun way.</li>
-        </ul>
-    </div>
-    <div class="double-line"></div>
-
-    <div class="segment">
-        <h2>Community and Philanthropy</h2>
-        <ul>
-            <li>👫 <strong>Dedicated to the Community:</strong> Giving back is a core value. I am associated with Modern Education and Welfare Society / MMF Trust, where we tirelessly work to develop and nurture the community.</li>
-        </ul>
-    </div>
-    <div class="double-line"></div>
-
-    <div class="segment">
-        <h2>Future Goals</h2>
-        <ul>
-            <li>🚀 <strong>Future Career:</strong> As I continue advancing my career, my dedication remains strong. My goal is to contribute to EPC and facility management companies by developing innovative, cost-effective, and sustainable solutions.</li>
-            <li>🤝 <strong>Collaboration:</strong> I'm always open to collaborations with professionals who share my passion for innovation, efficiency, and diverse experiences. Let's explore how our shared enthusiasm can lead to exciting collaborations!</li>
-        </ul>
-    </div>
-    <div class="double-line"></div>
-
-    <div class="segment">
-        <h2>Explore My Content 🌐 📝 Content Writer Extraordinaire</h2>
-        <p>You can explore insightful content on the future of mechanical and educational excellence through the following links:</p>
-        <ul>
-            <li><a href="https://www.linkedin.com/pulse/revolutionizing-mechanical-engineering-through-case-study-madany">Engineering Concepts</a></li>
-            <li><a href="https://www.linkedin.com/pulse/exploring-boon-bane-indian-education-system-focus-teachers-madany">General Insights</a></li>
-        </ul>
-        <p>In addition to creating compelling content that bridges technical complexities with practical insights, I also offer training programs designed to empower teams and elevate their expertise.</p>
-    </div>
-    <div class="double-line"></div>
-
-    <div class="segment">
-        <h2>Connect and Collaborate</h2>
-        <p>I've honed my skills in MEP operation and maintenance, further enriching my expertise. Together, let's navigate the ever-evolving landscape of Techno-Commercial Facility Management, where innovation drives efficiency, and mechanical excellence reigns supreme. Join me in shaping a brighter future! ✨🔗 #MechanicalEngineering #InnovationInAction #MEPExpertise</p>
-        <p>Reach out to discuss collaborations or share your thoughts. Together, we can make a positive impact in the world of content creation and training.</p>
-        <p>🚀 Let's Elevate Together</p>
-        <p>Join the Accumen Techno Community!</p>
-        <ul>
-            <li>🎓 Join us on YouTube and Telegram for insightful content and discussions.</li>
-            <li>📲 Get access to free e-books on our Telegram channel!</li>
-            <li>🔔 Subscribe, follow, and download for valuable insights that will empower your career journey.</li>
-            <li>🔗 Connect with us on LinkedIn: AccumenTechno for updates and networking opportunities.</li>
-        </ul>
-        <p>🚀 Let's learn and grow together! Join the Accumen Techno community today!</p>
-        <p>Thank you for joining me on this journey. Let's explore, learn, and elevate our skills together!</p>
-        <p>Reach at <a href="mailto:syed.madany86@gmail.com">syed.madany86@gmail.com</a> / <a href="http://www.accumentechno.com">www.accumentechno.com</a></p>
-    </div>
-    <div class="double-line"></div>
+  <h1>Syed Hilaluddin Madany</h1>
+  <h2>A Techno-Commercial Engineer & Educational Content Creator</h2>
+  <img src="profile_image.jpg" alt="Profile Image">
+  <hr>
+  <p>Hello! I began my career in the sales industry, where I honed my communication skills, built strong customer relationships, and helped clients meet their needs.</p>
+  <hr>
+  <p>Sales Across Industries: My travels have taken me through various sectors, including Filtration, Mining, Combustion, and Manufacturing. I've ventured beyond sales into project roles such as cost specialist and coordinator, effectively managing budgets, teams, and resources.</p>
+  <hr>
+  <p>Technical Expertise: My educational background includes technical roles as a Service and Site Engineer. I've ensured that complex systems like filters and combustion operate at peak efficiency.</p>
+  <hr>
+  <p>Sales and Marketing Acumen: Eager for new challenges, I transitioned to Sales and Marketing. As a mechanical engineer, I excel at translating complex engineering solutions into tangible benefits for customers, tailoring each solution to meet their unique requirements.</p>
+  <hr>
+  <p>Facilities Management: My career naturally evolved into facilities management, where I applied my background in sales, project management, and engineering. I ensure that every facility I manage is not only functional but optimized for maximum efficiency and stability.</p>
+  <hr>
+  <p>Content Creation and Education: Beyond my career, I'm passionate about creating educational content, especially in the realm of mechanical projects and technical concepts. This hobby allows me to share knowledge and learn in a fun way.</p>
+  <hr>
+  <ul>
+    <li>Dedicated to the Community: Giving back is a core value. I am associated with Modern Education and Welfare Society / MMF Trust, where we tirelessly work to develop and nurture the community.</li>
+  </ul>
+  <hr>
+  <p>Future Career: As I continue advancing my career, my dedication remains strong. My goal is to contribute to EPC and facility management companies by developing innovative, cost-effective, and sustainable solutions.</p>
+  <hr>
+  <p>Collaboration: I'm always open to collaborations with professionals who share my passion for innovation, efficiency, and diverse experiences. Let's explore how our shared enthusiasm can lead to exciting collaborations!</p>
+  <hr>
+  <p>You can explore insightful content on the future of mechanical and educational excellence through the following links:</p>
+  <ul>
+    <li><a href="https://www.linkedin.com/pulse/revolutionizing-mechanical-engineering-through-case-study-madany" style="color: #990099;">Engineering Concepts</a></li>
+    <li><a href="https://www.linkedin.com/pulse/exploring-boon-bane-indian-education-system-focus-teachers-madany" style="color: #990099;">General Insights</a></li>
+  </ul>
+  <p>In addition to creating compelling content that bridges technical complexities with practical insights, I also offer training programs designed to empower teams and elevate their expertise.</p>
+  <hr>
+  <p>I've honed my skills in MEP operation and maintenance, further enriching my expertise. Together, let's navigate the ever-evolving landscape of Techno-Commercial Facility Management, where innovation drives efficiency, and mechanical excellence reigns supreme. Join me in shaping a brighter future! ✨🔗 #MechanicalEngineering #InnovationInAction #MEPExpertise</p>
+  <p>Reach out to discuss collaborations or share your thoughts. Together, we can make a positive impact in the world of content creation and training.</p>
+  <hr>
+  <p>Join the Accumen Techno Community!</p>
+  <ul>
+    <li>Join us on YouTube and Telegram for insightful content and discussions.</li>
+    <li>Get access to free e-books on our Telegram channel!</li>
+    <li>Subscribe, follow, and download for valuable insights that will empower your career journey.</li>
+    <li>Connect with us on LinkedIn: AccumenTechno for updates and networking opportunities.</li>
+  </ul>
+  <p>Let's learn and grow together! Join the Accumen Techno community today!</p>
+  <hr>
+  <p>Thank you for joining me on this journey. Let's explore, learn, and elevate our skills together!</p>
+  <p>Reach at <a href="mailto:syed.madany86@gmail.com" style="color: #0000ff;">syed.madany86@gmail.com</a> / <a href="https://www.accumentechno.com" style="color: #0000ff;">www.accumentechno.com</a></p>
 </body>
 </html>
