--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
   <h1>Syed Hilaluddin Madany</h1>
   <h2>A Techno-Commercial Engineer & Educational Content Creator</h2>
-  <img src="profile_image.jpg" alt="Profile Image">
+  <img src="profile_image.jpg" alt=""C:\Users\DELL\Downloads\Digital Marketer LinkedIn Profile Picture.png"">
   <hr>
   <p>Hello! I began my career in the sales industry, where I honed my communication skills, built strong customer relationships, and helped clients meet their needs.</p>
   <hr>
@@ -68,5 +68,6 @@
   <hr>
   <p>Thank you for joining me on this journey. Let's explore, learn, and elevate our skills together!</p>
   <p>Reach at <a href="mailto:syed.madany86@gmail.com" style="color: #0000ff;">syed.madany86@gmail.com</a> / <a href="https://www.accumentechno.com" style="color: #0000ff;">www.accumentechno.com</a></p>
+  <p>Contact No: <span style="color: #ff0000;">+966 534262974</span></p>
 </body>
 </html>
