--- a/index.html
+++ b/index.html
@@ -7,67 +7,124 @@
   <style>
     body {
       font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      max-width: 800px;
+      margin: 20px auto;
+      padding: 20px;
+      background-color: #fff;
+      border-radius: 10px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
     h1 {
       color: #3366ff;
+      text-align: center;
+      margin-bottom: 10px;
     }
     h2 {
       color: #009933;
+      margin-bottom: 10px;
+    }
+    .profile-img {
+      display: block;
+      margin: 0 auto;
+      width: 200px;
+      height: auto;
+      border-radius: 50%;
+      margin-bottom: 20px;
+    }
+    .contact-info {
+      text-align: center;
+      color: #ff0000;
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
+    .email {
+      background-color: #3366ff;
+      color: #fff;
+      text-align: center;
+      padding: 20px;
+      border-radius: 5px;
+      margin-bottom: 20px;
+    }
+    .email h3 {
+      margin-top: 0;
+    }
+    .divider {
+      border-top: 2px solid #ccc;
+      margin: 20px 0;
     }
     ul {
-      color: #ff6600;
+      list-style-type: none;
+      padding: 0;
     }
-    p {
-      color: #333333;
+    ul li {
+      margin-bottom: 10px;
     }
   </style>
 </head>
 <body>
-  <h1>Syed Hilaluddin Madany</h1>
-  <h2>A Techno-Commercial Engineer & Educational Content Creator</h2>
-  <img src="profile_image.jpg" alt=""C:\Users\DELL\Downloads\Digital Marketer LinkedIn Profile Picture.png"">
-  <hr>
-  <p>Hello! I began my career in the sales industry, where I honed my communication skills, built strong customer relationships, and helped clients meet their needs.</p>
-  <hr>
-  <p>Sales Across Industries: My travels have taken me through various sectors, including Filtration, Mining, Combustion, and Manufacturing. I've ventured beyond sales into project roles such as cost specialist and coordinator, effectively managing budgets, teams, and resources.</p>
-  <hr>
-  <p>Technical Expertise: My educational background includes technical roles as a Service and Site Engineer. I've ensured that complex systems like filters and combustion operate at peak efficiency.</p>
-  <hr>
-  <p>Sales and Marketing Acumen: Eager for new challenges, I transitioned to Sales and Marketing. As a mechanical engineer, I excel at translating complex engineering solutions into tangible benefits for customers, tailoring each solution to meet their unique requirements.</p>
-  <hr>
-  <p>Facilities Management: My career naturally evolved into facilities management, where I applied my background in sales, project management, and engineering. I ensure that every facility I manage is not only functional but optimized for maximum efficiency and stability.</p>
-  <hr>
-  <p>Content Creation and Education: Beyond my career, I'm passionate about creating educational content, especially in the realm of mechanical projects and technical concepts. This hobby allows me to share knowledge and learn in a fun way.</p>
-  <hr>
-  <ul>
-    <li>Dedicated to the Community: Giving back is a core value. I am associated with Modern Education and Welfare Society / MMF Trust, where we tirelessly work to develop and nurture the community.</li>
-  </ul>
-  <hr>
-  <p>Future Career: As I continue advancing my career, my dedication remains strong. My goal is to contribute to EPC and facility management companies by developing innovative, cost-effective, and sustainable solutions.</p>
-  <hr>
-  <p>Collaboration: I'm always open to collaborations with professionals who share my passion for innovation, efficiency, and diverse experiences. Let's explore how our shared enthusiasm can lead to exciting collaborations!</p>
-  <hr>
-  <p>You can explore insightful content on the future of mechanical and educational excellence through the following links:</p>
-  <ul>
-    <li><a href="https://www.linkedin.com/pulse/revolutionizing-mechanical-engineering-through-case-study-madany" style="color: #990099;">Engineering Concepts</a></li>
-    <li><a href="https://www.linkedin.com/pulse/exploring-boon-bane-indian-education-system-focus-teachers-madany" style="color: #990099;">General Insights</a></li>
-  </ul>
-  <p>In addition to creating compelling content that bridges technical complexities with practical insights, I also offer training programs designed to empower teams and elevate their expertise.</p>
-  <hr>
-  <p>I've honed my skills in MEP operation and maintenance, further enriching my expertise. Together, let's navigate the ever-evolving landscape of Techno-Commercial Facility Management, where innovation drives efficiency, and mechanical excellence reigns supreme. Join me in shaping a brighter future! ✨🔗 #MechanicalEngineering #InnovationInAction #MEPExpertise</p>
-  <p>Reach out to discuss collaborations or share your thoughts. Together, we can make a positive impact in the world of content creation and training.</p>
-  <hr>
-  <p>Join the Accumen Techno Community!</p>
-  <ul>
-    <li>Join us on YouTube and Telegram for insightful content and discussions.</li>
-    <li>Get access to free e-books on our Telegram channel!</li>
-    <li>Subscribe, follow, and download for valuable insights that will empower your career journey.</li>
-    <li>Connect with us on LinkedIn: AccumenTechno for updates and networking opportunities.</li>
-  </ul>
-  <p>Let's learn and grow together! Join the Accumen Techno community today!</p>
-  <hr>
-  <p>Thank you for joining me on this journey. Let's explore, learn, and elevate our skills together!</p>
-  <p>Reach at <a href="mailto:syed.madany86@gmail.com" style="color: #0000ff;">syed.madany86@gmail.com</a> / <a href="https://www.accumentechno.com" style="color: #0000ff;">www.accumentechno.com</a></p>
-  <p>Contact No: <span style="color: #ff0000;">+966 534262974</span></p>
+  <div class="container">
+    <h1>Syed Hilaluddin Madany</h1>
+    <div class="contact-info">
+      <p>Contact No: +966 534262974</p>
+    </div>
+    <img src="C:\Users\DELL\Downloads\Digital Marketer LinkedIn Profile Picture.jpg" alt="Profile Image" class="profile-img">
+    <div class="email">
+      <h3>Techno-Commercial (Sales & Marketing) Engineer || Maintenance Supervisor || Educational Content Creator & Solopreneur</h3>
+      <p>Email: syed.madany86@gmail.com</p>
+    </div>
+    <div class="divider"></div>
+    <p>Hello! I began my career in the sales industry, where I honed my communication skills, built strong customer relationships, and helped clients meet their needs.</p>
+    <div class="divider"></div>
+    <h2>Sales Across Industries</h2>
+    <p>My travels have taken me through various sectors, including Filtration, Mining, Combustion, and Manufacturing. I've ventured beyond sales into project roles such as cost specialist and coordinator, effectively managing budgets, teams, and resources.</p>
+    <div class="divider"></div>
+    <h2>Technical Expertise</h2>
+    <p>My educational background includes technical roles as a Service and Site Engineer. I've ensured that complex systems like filters and combustion operate at peak efficiency.</p>
+    <div class="divider"></div>
+    <h2>Sales and Marketing Acumen</h2>
+    <p>Eager for new challenges, I transitioned to Sales and Marketing. As a mechanical engineer, I excel at translating complex engineering solutions into tangible benefits for customers, tailoring each solution to meet their unique requirements.</p>
+    <div class="divider"></div>
+    <h2>Facilities Management</h2>
+    <p>My career naturally evolved into facilities management, where I applied my background in sales, project management, and engineering. I ensure that every facility I manage is not only functional but optimized for maximum efficiency and stability.</p>
+    <div class="divider"></div>
+    <h2>Content Creation and Education</h2>
+    <p>Beyond my career, I'm passionate about creating educational content, especially in the realm of mechanical projects and technical concepts. This hobby allows me to share knowledge and learn in a fun way.</p>
+    <div class="divider"></div>
+    <ul>
+      <li>Dedicated to the Community: Giving back is a core value. I am associated with Modern Education and Welfare Society / MMF Trust, where we tirelessly work to develop and nurture the community.</li>
+    </ul>
+    <div class="divider"></div>
+    <p>Future Career: As I continue advancing my career, my dedication remains strong. My goal is to contribute to EPC and facility management companies by developing innovative, cost-effective, and sustainable solutions.</p>
+    <div class="divider"></div>
+    <p>Collaboration: I'm always open to collaborations with professionals who share my passion for innovation, efficiency, and diverse experiences. Let's explore how our shared enthusiasm can lead to exciting collaborations!</p>
+    <div class="divider"></div>
+    <p>You can explore insightful content on the future of mechanical and educational excellence through the following links:</p>
+    <ul>
+      <li><a href="https://www.linkedin.com/pulse/revolutionizing-mechanical-engineering-through-case-study-madany" style="color: #990099;">Engineering Concepts</a></li>
+      <li><a href="https://www.linkedin.com/pulse/exploring-boon-bane-indian-education-system-focus-teachers-madany" style="color: #990099;">General Insights</a></li>
+    </ul>
+    <div class="divider"></div>
+    <p>In addition to creating compelling content that bridges technical complexities with practical insights, I also offer training programs designed to empower teams and elevate their expertise.</p>
+    <div class="divider"></div>
+    <p>I've honed my skills in MEP operation and maintenance, further enriching my expertise. Together, let's navigate the ever-evolving landscape of Techno-Commercial Facility Management, where innovation drives efficiency, and mechanical excellence reigns supreme. Join me in shaping a brighter future! ✨🔗 #MechanicalEngineering #InnovationInAction #MEPExpertise</p>
+    <p>Reach out to discuss collaborations or share your thoughts. Together, we can make a positive impact in the world of content creation and training.</p>
+    <div class="divider"></div>
+    <p>Join the Accumen Techno Community!</p>
+    <ul>
+      <li>Join us on YouTube and Telegram for insightful content and discussions.</li>
+      <li>Get access to free e-books on our Telegram channel!</li>
+      <li>Subscribe, follow, and download for valuable insights that will empower your career journey.</li>
+      <li>Connect with us on LinkedIn: AccumenTechno for updates and networking opportunities.</li>
+    </ul>
+    <p>Let's learn and grow together! Join the Accumen Techno community today!</p>
+    <div class="divider"></div>
+    <p>Thank you for joining me on this journey. Let's explore, learn, and elevate our skills together!</p>
+  </div>
 </body>
 </html>
