--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="contact-info">
       <p>Contact No: +966 534262974</p>
     </div>
-    <img src="https://github.com/Hilal-Madany/resume/blob/main/Digital%20Marketer%20LinkedIn%20Profile%20Picture.jpg" alt="Profile Image" class="profile-img">
+    <img src="Digital Marketer LinkedIn Profile Picture.jpg" alt="Profile Image" class="profile-img">
     <div class="email">
       <h3>Techno-Commercial (Sales & Marketing) Engineer || Maintenance Supervisor || Educational Content Creator & Solopreneur</h3>
       <p>Email: syed.madany86@gmail.com</p>
