--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
     <img src="Digital Marketer LinkedIn Profile Picture.jpg" alt="Profile Image" class="profile-img">
     <div class="email">
-      <h3>Techno-Commercial (Sales & Marketing) Engineer || Maintenance Supervisor || Educational Content Creator & Solopreneur</h3>
+      <h3>Techno-Commercial (Sales & Marketing) Engineer || Maintenance Supervisor || Educational Content Creator & A Solopreneur</h3>
       <p>Email: syed.madany86@gmail.com</p>
     </div>
     <div class="divider"></div>
