--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
     <ul>
       <li><a href="https://www.linkedin.com/pulse/revolutionizing-mechanical-engineering-through-case-study-madany" style="color: #990099;">Engineering Concepts</a></li>
       <li><a href="https://www.linkedin.com/pulse/exploring-boon-bane-indian-education-system-focus-teachers-madany" style="color: #990099;">General Insights</a></li>
-      <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7176794816842743808" height="1067" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
-      <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7129395266012508160" height="1269" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+      https://www.linkedin.com/posts/s-hilaluddin_operationalefficiency-continuousimprovement-activity-7176794819623608320-N681?utm_source=share&utm_medium=member_desktop      <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7129395266012508160" height="1269" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
     </ul>
     <div class="divider"></div>
     <p>In addition to creating compelling content that bridges technical complexities with practical insights, I also offer training programs designed to empower teams and elevate their expertise.</p>
