--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Career Journey</title>
+  <title>Syed Hilaluddin Madany - My Career Journey</title>
   <style>
+    /* Styles for your webpage */
     body {
       font-family: Arial, sans-serif;
       background-color: #f4f4f4;
@@ -29,42 +30,22 @@
       color: #009933;
       margin-bottom: 10px;
     }
-    .profile-img {
-      display: block;
-      margin: 0 auto;
-      width: 200px;
-      height: auto;
-      border-radius: 50%;
+    .blog-post {
       margin-bottom: 20px;
     }
-    .contact-info {
-      text-align: center;
-      color: #ff0000;
-      font-weight: bold;
-      margin-bottom: 20px;
+    .blog-title {
+      color: #3366ff;
+      margin-bottom: 5px;
     }
-    .email {
-      background-color: #3366ff;
-      color: #fff;
-      text-align: center;
-      padding: 20px;
-      border-radius: 5px;
-      margin-bottom: 20px;
+    .blog-date {
+      color: #666;
+      font-size: 14px;
+      margin-bottom: 5px;
     }
-    .email h3 {
-      margin-top: 0;
+    .blog-excerpt {
+      color: #333;
     }
-    .divider {
-      border-top: 2px solid #ccc;
-      margin: 20px 0;
-    }
-    ul {
-      list-style-type: none;
-      padding: 0;
-    }
-    ul li {
-      margin-bottom: 10px;
-    }
+    /* Styles end */
   </style>
 </head>
 <body>
@@ -81,34 +62,19 @@
     <div class="divider"></div>
     <p>Hello! I began my career in the sales industry, where I honed my communication skills, built strong customer relationships, and helped clients meet their needs.</p>
     <div class="divider"></div>
-    <h2>Sales Across Industries</h2>
-    <p>My travels have taken me through various sectors, including Filtration, Mining, Combustion, and Manufacturing. I've ventured beyond sales into project roles such as cost specialist and coordinator, effectively managing budgets, teams, and resources.</p>
-    <div class="divider"></div>
-    <h2>Technical Expertise</h2>
-    <p>My educational background includes technical roles as a Service and Site Engineer. I've ensured that complex systems like filters and combustion operate at peak efficiency.</p>
-    <div class="divider"></div>
-    <h2>Sales and Marketing Acumen</h2>
-    <p>Eager for new challenges, I transitioned to Sales and Marketing. As a mechanical engineer, I excel at translating complex engineering solutions into tangible benefits for customers, tailoring each solution to meet their unique requirements.</p>
-    <div class="divider"></div>
-    <h2>Facilities Management</h2>
-    <p>My career naturally evolved into facilities management, where I applied my background in sales, project management, and engineering. I ensure that every facility I manage is not only functional but optimized for maximum efficiency and stability.</p>
-    <div class="divider"></div>
-    <h2>Content Creation and Education</h2>
-    <p>Beyond my career, I'm passionate about creating educational content, especially in the realm of mechanical projects and technical concepts. This hobby allows me to share knowledge and learn in a fun way.</p>
-    <div class="divider"></div>
-    <ul>
-      <li>Dedicated to the Community: Giving back is a core value. I am associated with Modern Education and Welfare Society / MMF Trust, where we tirelessly work to develop and nurture the community.</li>
-    </ul>
-    <div class="divider"></div>
-    <p>Future Career: As I continue advancing my career, my dedication remains strong. My goal is to contribute to EPC and facility management companies by developing innovative, cost-effective, and sustainable solutions.</p>
-    <div class="divider"></div>
-    <p>Collaboration: I'm always open to collaborations with professionals who share my passion for innovation, efficiency, and diverse experiences. Let's explore how our shared enthusiasm can lead to exciting collaborations!</p>
-    <div class="divider"></div>
-    <p>You can explore insightful content on the future of mechanical and educational excellence through the following links:</p>
-    <ul>
-      <li><a href="https://www.linkedin.com/pulse/revolutionizing-mechanical-engineering-through-case-study-madany" style="color: #990099;">Engineering Concepts</a></li>
-      <li><a href="https://www.linkedin.com/pulse/exploring-boon-bane-indian-education-system-focus-teachers-madany" style="color: #990099;">General Insights</a></li>
-    </ul>
+    <!-- Blog Section -->
+    <h2>Recent Blog Posts</h2>
+    <div class="blog-post">
+      <h3 class="blog-title"><a href="blog-post-1.html">Revolutionizing Mechanical Engineering Through Case Study</a></h3>
+      <p class="blog-date">March 15, 2024</p>
+      <p class="blog-excerpt">Explore how a case study approach is transforming the field of mechanical engineering, offering practical insights into complex problems.</p>
+    </div>
+    <div class="blog-post">
+      <h3 class="blog-title"><a href="blog-post-2.html">Exploring the Boon and Bane of the Indian Education System</a></h3>
+      <p class="blog-date">March 22, 2024</p>
+      <p class="blog-excerpt">Delve into the strengths and weaknesses of the Indian education system with a focus on teachers' roles and student outcomes.</p>
+    </div>
+    <!-- End Blog Section -->
     <div class="divider"></div>
     <p>In addition to creating compelling content that bridges technical complexities with practical insights, I also offer training programs designed to empower teams and elevate their expertise.</p>
     <div class="divider"></div>
