--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
       color: #009933;
       margin-bottom: 10px;
     }
+    .profile-img {
+      display: block;
+      margin: 0 auto;
+      max-width: 100%; /* Adjust the image width to fit the container */
+      height: auto;
+      border-radius: 50%;
+      margin-bottom: 20px;
+    }
     .blog-post {
       margin-bottom: 20px;
     }
