--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     .profile-img {
       display: block;
       margin: 0 auto;
-      max-width: 100%; /* Adjust the image width to fit the container */
+      width: 150px; /* Adjust the width as needed */
       height: auto;
       border-radius: 50%;
       margin-bottom: 20px;
