--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
     <!-- Blog Section -->
     <h2>Recent Blog Posts</h2>
     <div class="blog-post">
-      <h3 class="blog-title"><a href="blog-post-1.html">Revolutionizing Mechanical Engineering Through Case Study</a></h3>
+      <h3 class="blog-title"><a href="blog-post-1.html">Designing a Continuous Stress-Relieving Furnace-A Case Study.html</a></h3>
       <p class="blog-date">March 15, 2024</p>
-      <p class="blog-excerpt">Explore how a case study approach is transforming the field of mechanical engineering, offering practical insights into complex problems.</p>
+      <p class="blog-excerpt">Enhancing Operational Efficiency in Facility Management.html</p>
     </div>
     <div class="blog-post">
       <h3 class="blog-title"><a href="blog-post-2.html">Exploring the Boon and Bane of the Indian Education System</a></h3>
