--- a/index.html
+++ b/index.html
@@ -75,12 +75,10 @@
     <div class="blog-post">
       <h3 class="blog-title"><a href="blog-post-1.html">Designing a Continuous Stress-Relieving Furnace-A Case Study.html</a></h3>
       <p class="blog-date">March 15, 2024</p>
-      <p class="blog-excerpt">Enhancing Operational Efficiency in Facility Management.html</p>
     </div>
     <div class="blog-post">
-      <h3 class="blog-title"><a href="blog-post-2.html">Exploring the Boon and Bane of the Indian Education System</a></h3>
+      <h3 class="blog-title"><a href="blog-post-2.html">Enhancing Operational Efficiency in Facility Management.html</a></h3>
       <p class="blog-date">March 22, 2024</p>
-      <p class="blog-excerpt">Delve into the strengths and weaknesses of the Indian education system with a focus on teachers' roles and student outcomes.</p>
     </div>
     <!-- End Blog Section -->
     <div class="divider"></div>
