--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
     <!-- Blog Section -->
     <h2>Recent Blog Posts</h2>
     <div class="blog-post">
-      <h3 class="blog-title"><a href="blog-post-1.html">Designing a Continuous Stress-Relieving Furnace-A Case Study.html</a></h3>
+      <h3 class="blog-title"><a href="Designing a Continuous Stress-Relieving Furnace-A Case Study.html">Designing a Continuous Stress-Relieving Furnace-A Case Study.html</a></h3>
       <p class="blog-date">March 15, 2024</p>
     </div>
     <div class="blog-post">
-      <h3 class="blog-title"><a href="blog-post-2.html">Enhancing Operational Efficiency in Facility Management.html</a></h3>
+      <h3 class="blog-title"><a href="Enhancing Operational Efficiency in Facility Management.html">Enhancing Operational Efficiency in Facility Management.html</a></h3>
       <p class="blog-date">March 22, 2024</p>
     </div>
     <!-- End Blog Section -->
