--- a/index.html
+++ b/index.html
@@ -98,5 +98,26 @@
     <div class="divider"></div>
     <p>Thank you for joining me on this journey. Let's explore, learn, and elevate our skills together!</p>
   </div>
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Index Page</title>
+</head>
+<body>
+  <!-- Your index page content here -->
+
+  <!-- Back Button -->
+  <button onclick="goBack()">Go Back</button>
+
+  <script>
+    function goBack() {
+      window.history.back();
+    }
+  </script>
+</body>
+</html>
+
 </body>
 </html>
