--- a/index.html
+++ b/index.html
@@ -60,10 +60,22 @@
   <div class="container">
     <h1>Syed Hilaluddin Madany</h1>
     <div class="contact-info">
+
+      <style>
+    /* Centering the p element */
+    p {
+      text-align: center;
+    }
+  </style>
       <p>Contact No: +966 534262974</p>
     </div>
     <img src="Digital Marketer LinkedIn Profile Picture.jpg" alt="Profile Image" class="profile-img">
     <div class="email">
+      <style>
+    /* Centering the h3 element */
+    h3 {
+      text-align: center;
+    }
       <h3>Techno-Commercial (Sales & Marketing) Engineer || Maintenance Supervisor || Educational Content Creator & A Solopreneur</h3>
       <p>Email: syed.madany86@gmail.com</p>
     </div>
