--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <p style="color: #333;">Contact No: +966 534262974</p>
     </div>
     
-    <img src="profile-image.jpg" alt="Profile Image" class="profile-img">
+    <img src="Digital Marketer LinkedIn Profile Picture.jpg" alt="Profile Image" class="profile-img">
     
     <h3 style="background-color: #f4f4f4; padding: 10px; border-radius: 5px;">Techno-Commercial (Sales & Marketing) Engineer || Maintenance Supervisor || Educational Content Creator & A Solopreneur</h3>
     <p>Email: syed.madany86@gmail.com</p>
