--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
     <!-- Profile image -->
     <img src="Digital Marketer LinkedIn Profile Picture.jpg" alt="Profile Image" class="profile-img">
+    <a href="subscription.html">Subscribe to Download Our New Technical eBooks!</a>
 
     <!-- Rest of the content justified -->
     <p>Hello! I began my career in the sales industry, where I honed my communication skills, built strong customer relationships, and helped clients meet their needs.</p>
