--- a/subscription.html
+++ b/subscription.html
@@ -5,12 +5,12 @@
 </head>
 <body>
   <h1>Subscribe to Download Our New Technical eBooks!</h1>
-  <form id="subscriptionForm">
+  <form id="subscriptionForm" method="POST" action="/subscribe">
     <label for="name">Name:</label>
-    <input type="text" id="name" required>
+    <input type="text" id="name" name="name" required>
     <br>
     <label for="email">Email:</label>
-    <input type="email" id="email" required>
+    <input type="email" id="email" name="email" required>
     <br>
     <button type="submit">Subscribe</button>
   </form>
