--- a/index.html
+++ b/index.html
@@ -79,6 +79,30 @@
     </ul>
     <p>Thank you for joining me on this journey. Let's explore, learn, and elevate our skills together!</p>
   </div>
+  #subscriptionForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#subscriptionForm label {
+  margin-bottom: 10px;
+}
+
+#subscriptionForm input {
+  margin-bottom: 20px;
+}
+
+#message {
+  margin-top: 20px;
+  color: red;
+}
+
+a {
+  color: red;
+  text-decoration: none;
+  margin-top: 20px;
+}
 
   <!-- Footer -->
   <footer>
