--- a/subscription.html
+++ b/subscription.html
@@ -1,20 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Subscription Form</title>
-</head>
-<body>
-  <h1>Subscribe to Download Our New Technical eBooks!</h1>
-  <form id="subscriptionForm" method="POST" action="/subscribe">
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required>
-    <br>
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required>
-    <br>
-    <button type="submit">Subscribe</button>
-  </form>
-  <div id="message"></div>
-  <script src="subscription.js"></script>
-</body>
-</html>
+<form id="subscription-form">
+  <label for="email">Email address:</label>
+  <input type="email" id="email" name="email" required>
+  <label for="name">Name:</label>
+  <input type="text" id="name" name="name" required>
+  <button type="submit">Subscribe</button>
+</form>
