--- a/index.html
+++ b/index.html
@@ -53,7 +53,14 @@
     <!-- Profile image -->
     <img src="Digital Marketer LinkedIn Profile Picture.jpg" alt="Profile Image" class="profile-img">
     <p style="text-align:center;">
-  <a href="subscription.html" style="color:red;font-size:24px;font-weight:bold;">Subscribe to Download Our New Technical eBooks!</a>
+ <h2>Subscribe to Our Newsletter</h2>
+  <form id="subscription-form">
+    <label for="email">Email address:</label>
+    <input type="email" id="email" name="email" required>
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" required>
+    <button type="submit">Subscribe</button>
+  </form>
 </p>
 
     <!-- Rest of the content justified -->
