--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <!-- Rest of the content justified -->
     <p>Hello! I began my career in the sales industry, where I honed my communication skills, built strong customer relationships, and helped clients meet their needs.</p>
-
+<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7191642158024536064" height="1050" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
     <h2>Recent Blog Posts</h2>
     <div class="blog-post">
       <a href="Designing a Continuous Stress-Relieving Furnace-A Case Study.html">Designing a Continuous Stress-Relieving Furnace-A Case Study</a>
