--- a/index.html
+++ b/index.html
@@ -65,8 +65,18 @@
 
     <!-- Rest of the content justified -->
     <p>Hello! I began my career in the sales industry, where I honed my communication skills, built strong customer relationships, and helped clients meet their needs.</p>
+<table>
+  <tr>
+    <td>
+      <code>
+
 <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7191642158024536064" height="1050" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
     <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7189463024338878464" height="412" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+        
+      </code>
+    </td>
+  </tr>
+</table>
     <h2>Recent Blog Posts</h2>
     <div class="blog-post">
       <a href="Designing a Continuous Stress-Relieving Furnace-A Case Study.html">Designing a Continuous Stress-Relieving Furnace-A Case Study</a>
