--- a/index.html
+++ b/index.html
@@ -74,16 +74,26 @@
     </ul>
     <p>Thank you for joining me on this journey. Let's explore, learn, and elevate our skills together!</p>
   </div>
-  <p style="text-align:center;">
- <h2>Subscribe to Our Newsletter</h2>
-  <form id="subscription-form">
-    <label for="email">Email address:</label>
-    <input type="email" id="email" name="email" required>
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required>
-    <button type="submit">Subscribe</button>
-  </form>
-</p>
+  <style>
+  body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+</style>
+
+<body>
+  <p>
+    <h2>Subscribe to Our Newsletter</h2>
+    <form id="subscription-form">
+      <label for="email">Email address:</label>
+      <input type="email" id="email" name="email" required>
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required>
+      <button type="submit">Subscribe</button>
+    </form>
+  </p>
+</body>
  
   <!-- Footer -->
   <footer>
