--- a/index.html
+++ b/index.html
@@ -1,103 +1,91 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Syed Hilaluddin Madany - Profile</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif; /* Setting font to sans-serif */
-    }
-
-    /* Centering the container */
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-
-    /* Styling for profile image */
-    .profile-img {
-      width: 200px;
-      height: auto;
-      border-radius: 50%;
-      margin: 20px auto;
-      display: block;
-    }
-
-    /* Styling for name heading */
-    h1 {
-      text-align: center;
-    }
-
-    /* Styling for contact info and email */
-    p {
-      text-align: justify;
-    }
-
-    /* Styling for footer */
-    footer {
-      text-align: center;
-      margin-top: 20px;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h1>Syed Hilaluddin Madany</h1> <!-- Name heading -->
-
-    <!-- Contact number and email -->
-    <p>Contact No: +966 534262974</p>
-    <p>Email: syed.madany86@gmail.com</p>
-
-    <!-- Profile image -->
-    <img src="Digital Marketer LinkedIn Profile Picture.jpg" alt="Profile Image" class="profile-img">
-
-    <!-- Rest of the content justified -->
-    <p>Hello! I began my career in the sales industry, where I honed my communication skills, built strong customer relationships, and helped clients meet their needs.</p>
-<div class="blog-post">
-      <a href="Designing a Continuous Stress-Relieving Furnace-A Case Study.html">Designing a Continuous Stress-Relieving Furnace-A Case Study</a>
-      <p>March 15, 2024</p>
-    </div>
-    <div class="blog-post">
-      <a href="Enhancing Operational Efficiency in Facility Management.html">Enhancing Operational Efficiency in Facility Management</a>
-      <p>March 22, 2024</p>
-    </div>
-
-    <!-- Additional content -->
-    <p>In addition to creating compelling content that bridges technical complexities with practical insights, I also offer training programs designed to empower teams and elevate their expertise.</p>
-    <p>I've honed my skills in MEP operation and maintenance, further enriching my expertise. Together, let's navigate the ever-evolving landscape of Techno-Commercial Facility Management, where innovation drives efficiency, and mechanical excellence reigns supreme. Join me in shaping a brighter future! ✨🔗 #MechanicalEngineering #InnovationInAction #MEPExpertise</p>
-    <p>Reach out to discuss collaborations or share your thoughts. Together, we can make a positive impact in the world of content creation and training.</p>
-    <p>Join the Accumen Techno Community!</p>
-    <ul>
-      <li>Join us on YouTube for insightful content and discussions: <a href="https://www.youtube.com/channel/UCejAshelu8oNg6fdku0RVkg">Accumen Techno YouTube</a></li>
-    </ul>
-    <p>Thank you for joining me on this journey. Let's explore, learn, and elevate our skills together!</p>
-  </div>
-  <style>
+<style>
   body {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+  }
+
+  h2 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+
+  p {
+    font-size: 1.2rem;
+    line-height: 1.5;
+    margin-bottom: 1rem;
+  }
+
+  form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2rem;
+  }
+
+  label {
+    margin-right: 1rem;
+  }
+
+  input[type="email"],
+  input[type="text"] {
+    padding: 0.5rem;
+    font-size: 1.2rem;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-right: 1rem;
+  }
+
+  button {
+    padding: 0.5rem 2rem;
+    font-size: 1.2rem;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  button:hover {
+    background-color: #45a049;
   }
 </style>
 
 <body>
-  <p>
-    <h2>Subscribe to Our Newsletter</h2>
-    <form id="subscription-form">
-      <label for="email">Email address:</label>
-      <input type="email" id="email" name="email" required>
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required>
-      <button type="submit">Subscribe</button>
-    </form>
-  </p>
+  <h2>Syed Hilaluddin Madany</h2>
+  <p>Contact No: +966 534262974</p>
+  <p>Email: syed.madany86@gmail.com</p>
+
+  <img src="profile-image.jpg" alt="Profile Image" width="200" height="200">
+
+  <p>Hello! I began my career in the sales industry, where I honed my communication skills, built strong customer relationships, and helped clients meet their needs.</p>
+
+  <h2>Designing a Continuous Stress-Relieving Furnace - A Case Study</h2>
+  <p>March 15, 2024</p>
+
+  <h2>Enhancing Operational Efficiency in Facility Management</h2>
+  <p>March 22, 2024</p>
+
+  <p>In addition to creating compelling content that bridges technical complexities with practical insights, I also offer training programs designed to empower teams and elevate their expertise.</p>
+
+  <p>I've honed my skills in MEP operation and maintenance, further enriching my expertise. Together, let's navigate the ever-evolving landscape of Techno-Commercial Facility Management, where innovation drives efficiency, and mechanical excellence reigns supreme. Join me in shaping a brighter future! ✨🔗 #MechanicalEngineering #InnovationInAction #MEPExpertise</p>
+
+  <p>Reach out to discuss collaborations or share your thoughts. Together, we can make a positive impact in the world of content creation and training.</p>
+
+  <p>Join the Accumen Techno Community!</p>
+
+  <p><a href="https://www.youtube.com/AccumenTechno" target="_blank">Accumen Techno YouTube</a></p>
+
+  <p>Thank you for joining me on this journey. Let's explore, learn, and elevate our skills together!</p>
+
+  <form id="subscription-form">
+    <label for="email">Email address:</label>
+    <input type="email" id="email" name="email" required>
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" required>
+    <button type="submit">Subscribe</button>
+  </form>
+
+  <p><a href="www.accumentechno.com" target="_blank">Visit my other website: www.accumentechno.com</a></p>
 </body>
- 
-  <!-- Footer -->
-  <footer>
-    Visit my other website: <a href="http://www.accumentechno.com">www.accumentechno.com</a>
-  </footer>
-</body>
-</html>
