--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <p>Contact No: +966 534262974</p>
   <p>Email: syed.madany86@gmail.com</p>
 
-  <img src=https://github.com/Hilal-Madany/shm/commit/e07b90de33423736df5ba4461f56b2d1b115ecc3 alt="Profile Image" width="200" height="200">
+  <img src=Digital Marketer LinkedIn Profile Picture.jpg alt="Profile Image" width="200" height="200">
 
   <p>Hello! I began my career in the sales industry, where I honed my communication skills, built strong customer relationships, and helped clients meet their needs.</p>
 
