--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   <p>Hello! I began my career in the sales industry, where I honed my communication skills, built strong customer relationships, and helped clients meet their needs.</p>
 
-  <h2>Designing a Continuous Stress-Relieving Furnace - A Case Study</h2>
+  <h2>Designing a Continuous Stress-Relieving Furnace-A Case Study.html</h2>
   <p>March 15, 2024</p>
 
   <h2>Enhancing Operational Efficiency in Facility Management</h2>
