--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <h2>Designing a Continuous Stress-Relieving Furnace-A Case Study.html</h2>
   <p>March 15, 2024</p>
 
-  <h2>Enhancing Operational Efficiency in Facility Management</h2>
+  <h2>Enhancing Operational Efficiency in Facility Management.html</h2>
   <p>March 22, 2024</p>
 
   <p>In addition to creating compelling content that bridges technical complexities with practical insights, I also offer training programs designed to empower teams and elevate their expertise.</p>
