--- a/index.html
+++ b/index.html
@@ -61,17 +61,20 @@
 
   <p>Hello! I began my career in the sales industry, where I honed my communication skills, built strong customer relationships, and helped clients meet their needs.</p>
 
-  <p>
   <a href="Designing%20a%20Continuous%20Stress-Relieving%20Furnace-A%20Case%20Study.html">
-    Designing a Continuous Stress-Relieving Furnace-A Case Study (March 15, 2024)
-  </a>
-</p>
-
-<p>
-  <a href="Enhancing%20Operational%20Efficiency%20in%20Facility%20Management.html">
-    Enhancing Operational Efficiency in Facility Management (March 22, 2024)
-  </a>
-</p>
+            Designing a Continuous Stress-Relieving Furnace - A Case Study (March 15, 2024)
+          </a>
+        </p>
+      </li>
+      <li>
+        <p>
+          <a href="Enhancing%20Operational%20Efficiency%20in%20Facility%20Management.html">
+            Enhancing Operational Efficiency in Facility Management (March 22, 2024)
+          </a>
+        </p>
+      </li>
+    </ul>
+    <p>Follow me on <a href="https://www.linkedin.com/in/s-hilaluddin/" target="_blank">LinkedIn</a> for more illustrative articles.</p>
 
   <p>In addition to creating compelling content that bridges technical complexities with practical insights, I also offer training programs designed to empower teams and elevate their expertise.</p>
 
